--- a/Bootstrap4/conFusion/index.html
+++ b/Bootstrap4/conFusion/index.html
@@ -68,6 +68,94 @@
         </div>
     </div>
 </div>
+
+
+<div id="reservationModal" class="modal fade" role="dialog">
+    <div class="modal-dialog modal-lg" role="content">
+        <!-- Modal content-->
+        <div class="modal-content">
+            <div class="modal-header">
+                <h4 class="modal-title">Reserve a Table </h4>
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+            </div>
+            <div class="modal-body">
+                <form>
+                    <div class="form-group row ">
+                        <label for="NumbGuests" class="col-sm-2 col-form-label">Number of Guests</label>
+                        <div class="col">
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="one_guest_radio" checked>
+                                <label class="form-check-label" >1</label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="two_guest_radio">
+                                <label class="form-check-label" >2</label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="three_guest_radio">
+                                <label class="form-check-label" >3</label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="four_guest_radio">
+                                <label class="form-check-label" >4</label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="five_guest_radio">
+                                <label class="form-check-label">5</label>
+                            </div>
+
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="six_guest_radio">
+                                <label class="form-check-label" >6</label>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form-row">
+                        <dd class="col-md-2 col-sm-12">Section</dd>
+                        <dd class="col-md-10 col-sm-12">
+                            <div class="btn-group btn-group-toggle" data-toggle="buttons">
+                                <label class="btn btn-success active">
+                                    <input type="radio" name="options" id="option1" autocomplete="off" checked=""> Non-Smoking
+                                </label>
+                                <label class="btn btn-danger">
+                                    <input type="radio" name="options" id="option2" autocomplete="off"> Smoking
+                                </label>
+                            </div>
+                        </dd>
+                    </div>
+
+
+                    <div class="form-row">
+                        <dd class="col-md-2 col-sm-12">Date and Time</dd>
+                        <dd class="col-md-10 col-sm-12">
+                            <div class="form-group row">
+                                <div class="col-md-5">
+                                    <input type="text" class="form-control" id="date" name="date" placeholder="Date">
+                                </div>
+                                <div class="col-md-5">
+                                    <input type="text" class="form-control" id="time" name="time" placeholder="Time">
+                                </div>
+                            </div>
+                        </dd>
+                    </div>
+
+                    <div class="form-group row">
+                        <div class="offset-md-2 col-md-10">
+                            <button type="button" class="btn-secondary btn" data-dismiss="modal">Cancel</button>
+                            <button type="submit" class="btn btn-primary  btn">Reserve</button>
+                        </div>
+                    </div>
+                </form>
+            </div>
+<!--            <div class="modal-footer">-->
+<!--                <button type="button" class="btn btn-default btn-sm" data-dismiss="modal">Cancel</button>-->
+<!--                <button type="submit" class="btn btn-primary btn-sm">Sign in</button>-->
+<!--            </div>-->
+        </div>
+    </div>
+</div>
+
+
 <header class="jumbotron">
     <div class="container">
         <div class="row row-header">
@@ -79,8 +167,7 @@
                 <img src="img/logo.png" class="img-fluid">
             </div>
             <div class="col-12 col-sm align-self-center">
-                <a type="button" class="btn btn-warning btn-sm btn-block"
-                   href="#reserveForm">Reserve Table</a>
+                <a data-toggle="modal" data-target="#reservationModal" type="button" class="btn btn-warning btn-sm btn-block">Reserve Table</a>
             </div>
         </div>
     </div>
@@ -144,65 +231,7 @@
         </div>
     </div>
 
-    <div class="row row-content align-items-center justify-content-center">
-        <div class="col-12 col-sm-8">
-            <div class="card">
-                <h3 class="card-header bg-warning text-white">Reserve a Table</h3>
-                <div class="card-body">
-                    <form id="reserveForm">
-                        <div class="form-group row">
-                            <label for="numbGuests" class="col-12 col-sm-12 col-md-2 col-form-label">Number of Guests</label>
-                            <div class="form-check">
-                                <label class="form-check-label">
-                                    <input type="radio" class="form-check-inline" id="guest1" name="guests" value="">1
-                                </label>
-                                <label class="form-check-label">
-                                    <input type="radio" class="form-check-inline" id="guest2" name="guests" value="">2
-                                </label>
-                                <label class="form-check-label">
-                                    <input type="radio" class="form-check-inline" id="guest3" name="guests" value="">3
-                                </label>
-                                <label class="form-check-label">
-                                    <input type="radio" class="form-check-inline" id="guest4" name="guests" value="">4
-                                </label>
-                                <label class="form-check-label">
-                                    <input type="radio" class="form-check-inline" id="guest5" name="guests" value="">5
-                                </label>
-                                <label class="form-check-label">
-                                    <input type="radio" class="form-check-inline" id="guest6" name="guests" value="">6
-                                </label>
-                            </div>
-                        </div>
-                        <div class="form-group row">
-                            <label for="date" class="col-12 col-sm-12 col-md-2 col-form-label">Date and Time</label>
-                            <div class="col-12 col-sm-12 col-md-4">
-                                <div class="input-group">
-                                    <div class="input-group-addon">
-                                        <i class="fa fa-calendar"></i>
-                                    </div>
-                                    <input type="date" class="form-control" id="date" name="date" placeholder="Date">
-                                </div>
-                            </div>
-                            <div class="col-12 col-sm-12 col-md-4">
-                                <div class="input-group">
-                                    <div class="input-group-addon">
-                                        <i class="fa fa-clock-o"></i>
-                                    </div>
-                                    <input type="time" class="form-control" id="time" name="time" placeholder="Time">
-                                </div>
-                            </div>
-                        </div>
-                        <div class="form-group row">
-                            <div class="offset-md-2 col-md-10">
-                                <button type="submit" class="btn btn-primary">Reserve</button>
-                            </div>
-                        </div>
-                    </form>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
+
 
 <footer class="footer">
     <div class="container">
