--- a/Bootstrap4/conFusion/index.html
+++ b/Bootstrap4/conFusion/index.html
@@ -236,11 +236,10 @@
 
                     </div>
                 </div>
-
             </div>
         </div>
     </div>
-
+</div>
 
 
 <footer class="footer">
