--- a/Bootstrap4/conFusion/aboutus.html
+++ b/Bootstrap4/conFusion/aboutus.html
@@ -212,7 +212,7 @@
         <div class="col-12 col-sm-3">
         </div>
     </div>
-
+    </div>
 </div>
 
 <footer class="footer">
@@ -263,6 +263,7 @@
 <script src="node_modules/jquery/dist/jquery.min.js"></script>
 <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
 <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+<script src="js/scripts.js"></script>
 
 </body>
 
